[JBWS-4362]:Upgrade jbossws-parent pom and upgrade the jdk baseline to 11